# secret-handshake

./: .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: github-actions.yml
.reuse/: dep5
examples/: test_client.py  test_server.py
secret_handshake/: __init__.py  boxstream.py  crypto.py  network.py  test_boxstream.py  test_crypto.py  util.py
tests/: helpers.py  test_boxstream.py  test_crypto.py  test_network.py  test_util.py
