[tool.poetry]
name = "secret-handshake"
version = "0.1.0"
description = "A module that implements Secret Handshake"
authors = ["Pedro Ferreira <pedro@dete.st>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "secret_handshake"}]

[tool.poetry.dependencies]
python = "^3.12"
async_generator = "^1.10"
PyNaCl = "^1.5.0"

[tool.poetry.group.dev.dependencies]
check-manifest = "^0.49"
coverage = "^7.3.2"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
